tokio-postgres/tests/derive/fail/unknown_field_attr.stderr
error: unknown override
 --> tests/derive/fail/unknown_field_attr.rs:5:16
  |
5 |     #[postgres(foo = "bar")]
  |                ^^^
